hard-gists/b18ce332bde37e156034e5d3f60f8a23/run.log
=== Docker Run Log for b18ce332bde37e156034e5d3f60f8a23 ===
Started at: Mi 29. Okt 19:24:13 CET 2025

[2025-10-29 19:24:14] START: Running container for b18ce332bde37e156034e5d3f60f8a23
[2025-10-29 19:24:14] SUCCESS: Container 037bf7299400b13bdb5ce4c94b8811408ed827d783542af394feb4c252e42b3e started for b18ce332bde37e156034e5d3f60f8a23
=== Container logs for b18ce332bde37e156034e5d3f60f8a23 ===
  File "/snippet.py", line 177
    print "Epoch %d, train error: %.2f, valid accuracy: %.1f %%" % (epoch, epoch_error, valid_accuracy * 100.0)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for b18ce332bde37e156034e5d3f60f8a23 ===
[2025-10-29 19:24:16] INFO: Container 037bf7299400b13bdb5ce4c94b8811408ed827d783542af394feb4c252e42b3e has stopped
